tests/paczka2/big_fuzzy/52796661.err
Error in line 9: hgd A759 35,5
Error in line 7: KGuZSbD S564 49,0
Error in line 8: hrN5CpZY A759 41,7
Error in line 13: hrN5CpZY S906 7,3
Error in line 17: O3PTq7ajRic S564 4,6
Error in line 18: O3PTq7ajRic S906 68,8
Error in line 26: S564 S564 0,3
Error in line 25: O3PTq7ajRic A62 61,0
Error in line 48: ivA3o8DPC S90h 50,2
Error in line 45: ivA3o8DPC A62 6,5
Error in line 61: KGuZSbD A759 11,2
Error in line 57: ivA3o8DPC S906 0,7
Error in line 67: ivA3o8DPC S564 93,6
Error in line 86: KGuZSbD S906 30,0
Error in line 89: hrN5CpZY S906 82,8
Error in line 99: ivA3o8DPC A759 36,88
Error in line 101: S564 S906 29,3
Error in line 98: ivA3o8DPC A759 7,7
Error in line 111: ivA3o8DPC S906 39,7
Error in line 110: PgSYRNEv A62 40,4
Error in line 120: ivA3o8DPC A759 5,7
Error in line 127: KGuZSbD A62 92,6
Error in line 145: hrN5CpZY A759 17,5
Error in line 149: ivA3o8DPC A759 28,7
Error in line 152: hgd A62 106,7
Error in line 160: S564 A759 -5,4
Error in line 135: KGuZSbD S564 362,6
Error in line 147: PgSYRNEv S906 94,9
Error in line 176: PgSYRNEv A759 53,5
Error in line 173: hrN5CpZY S906 318,8
Error in line 181: KGuZSbD A759 9,3
Error in line 169: hgd S906 198,1
Error in line 194: O3PTq7ajRic S906 77,3
Error in line 195: hgd A759 63,7
Error in line 191: S564 A759 18,3
Error in line 207: hgd S906 6?,6
Error in line 201: KGuZSbD S564 68,8
Error in line 210: KGuZSbD S906 1,0
Error in line 202: hgd A62 96,5
Error in line 234: ivA3o8DPC A62 63,0
Error in line 236: ivA3o8DPC A759 16,2
Error in line 240: S564 S906 243,8
Error in line 239: hgd S564 91,1
Error in line 244: S564 A62 30,9
